@@ -2161,6 +2161,34 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.autoBlindAnte, 0, 101)
         return d
     # ------------------------------------------------------------------------
+    def chatItUp(self, (client, packet), id, gameId, myMessage):
+        avatar = self.service.avatars[id]
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerChat(serial = client.getSerial(),
+                                                 game_id = gameId,
+                                                 message = myMessage))
+        found = 0
+        for packet in avatar.resetPacketsQueue():
+            found += 1
+            if packet.type == PACKET_POKER_CHAT:
+                self.assertEquals(packet.game_id, gameId)
+                self.assertEqual(packet.message.find(myMessage) >= 0, True)
+        self.assertEquals(found, 1)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test50_chat(self):
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 101, 'Table2', '2-4-limit')
+        d.addCallback(self.seatTable, 0, 101)
+        d.addCallback(self.buyInTable, 0, 101, 1000)
+        d.addCallback(self.autoBlindAnte, 0, 101)
+        d.addCallback(self.sitTable, 0, 101)
+        d.addCallback(self.readyToPlay, 0, 101)
+        d.addCallback(self.chatItUp, 0, 101, "I drink your milkshake!")
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -2176,7 +2204,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test49"
+#    loader.methodPrefix = "test50"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
